[workspace]
members = [".", "crates/common-infrastructure", "crates/podfetch-domain", "crates/podfetch-web", "crates/podfetch-persistence", "crates/podfetch-storage"]
resolver = "2"

[package]
name = "podfetch"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "semver", "cargo-lock"] }

[features]
default = ["sqlite", "postgresql"]
postgresql = ["common-infrastructure/postgresql", "podfetch-persistence/postgresql", "podfetch-web/postgresql",
    "dep:r2d2_postgres", "hyper-tls", "native-tls"]
sqlite = ["common-infrastructure/sqlite", "podfetch-persistence/sqlite", "podfetch-web/sqlite"]

[dependencies]
# Workspace crates
common-infrastructure = { path = "crates/common-infrastructure", default-features = false }
podfetch-domain = { path = "crates/podfetch-domain" }
podfetch-persistence = { path = "crates/podfetch-persistence", default-features = false }
podfetch-storage = { path = "crates/podfetch-storage" }
podfetch-web = { path = "crates/podfetch-web", default-features = false }

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "http2"] }

# CLI
rpassword = "7.4.0"
sha256 = "1.6.0"
uuid = { version = "1.22.0", features = ["v4", "serde"] }

# Serialization
serde = "1.0.228"
serde_derive = "1.0.189"
serde_json = "1.0.149"

# Logging
log = "0.4.29"

# PostgreSQL (optional)
r2d2_postgres = { version = "0.18.2", optional = true }

[target.'cfg(not(windows))'.dependencies]
hyper-tls = { version = "0.6.0", optional = true }
native-tls = { version = "0.2.15", optional = true }

[dev-dependencies]
serial_test = "3.4.0"
testcontainers = { version = "0.24.0" }
testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }
derive_builder = "0.20.2"
fake = { version = "5.0.0", features = ["chrono", "url"] }
bollard = { version = "*", features = ["rustls", "rustls-native-certs"], default-features = false }
axum-test = "19.1.1"

[profile.release]
debug = true

[profile.release.package."*"]
debug = false
