[workspace]
members = [".", "crates/common-infrastructure", "crates/podfetch-agent-protocol", "crates/podfetch-cast", "crates/podfetch-domain", "crates/podfetch-web", "crates/podfetch-persistence", "crates/podfetch-storage"]
resolver = "2"

[package]
name = "podfetch"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
build = "build.rs"

[build-dependencies]
built = { workspace = true }

[features]
default = ["sqlite", "postgresql"]
postgresql = ["common-infrastructure/postgresql", "podfetch-persistence/postgresql", "podfetch-web/postgresql",
    "dep:r2d2_postgres", "hyper-tls", "native-tls"]
sqlite = ["common-infrastructure/sqlite", "podfetch-persistence/sqlite", "podfetch-web/sqlite"]

[dependencies]
# Workspace crates
common-infrastructure = { workspace = true }
podfetch-agent-protocol = { workspace = true }
podfetch-cast = { workspace = true }
podfetch-domain = { workspace = true }
podfetch-persistence = { workspace = true }
podfetch-storage = { workspace = true }
podfetch-web = { workspace = true }

# Async runtime
tokio = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
mdns-sd = { workspace = true }
rust_cast = { workspace = true }
# Pull in rustls with the ring crypto provider explicitly so that
# rust_cast's transitive rustls dep auto-selects a provider. Without this,
# CastDevice::connect panics on TLS init.
rustls = { version = "0.23", features = ["ring"] }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# CLI
rpassword = { workspace = true }
sha256 = { workspace = true }
uuid = { workspace = true }

# URL parsing
url = "2.5.8"

# Logging
tracing = { workspace = true }

# PostgreSQL (optional)
r2d2_postgres = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
hyper-tls = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }

[dev-dependencies]
serial_test = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
derive_builder = { workspace = true }
fake = { workspace = true }
bollard = { workspace = true }
axum-test = { workspace = true }

[profile.release]
debug = "line-tables-only"

[profile.release.package."*"]
debug = false

[workspace.dependencies]
# Workspace internal crates
common-infrastructure = { path = "crates/common-infrastructure", default-features = false }
podfetch-agent-protocol = { path = "crates/podfetch-agent-protocol" }
podfetch-cast = { path = "crates/podfetch-cast" }
podfetch-domain = { path = "crates/podfetch-domain" }
podfetch-persistence = { path = "crates/podfetch-persistence", default-features = false }
podfetch-storage = { path = "crates/podfetch-storage" }
podfetch-web = { path = "crates/podfetch-web", default-features = false }

# External dependencies
async-recursion = "1.1.1"
axum = { version = "0.8.9", features = ["macros", "http2", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie", "query"] }
axum-test = "20.0.0"
base64 = "0.22.1"
bollard = { version = "*", features = ["rustls", "rustls-native-certs"], default-features = false }
built = { version = "0.8.0", features = ["chrono", "semver", "cargo-lock"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clokwerk = "0.4.0"
derive_builder = "0.20.2"
diesel = { version = "2.3.9", features = ["chrono", "r2d2"] }
diesel_migrations = "2.3.2"
fake = { version = "5.0.0", features = ["chrono", "url"] }
file-format = "0.29.0"
frankenstein = { version = "0.49.0", features = ["client-ureq"] }
fs_extra = "1.3.0"
futures = "0.3.32"
http = "1.3.1"
hyper-tls = { version = "0.6.0" }
id3 = "1.16.4"
indexmap = "2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
maud = { version = "*", features = ["axum", "axum-core"] }
mime_guess = "2.0.5"
mp4ameta = "0.13.0"
native-tls = { version = "0.2.18" }
opml = "1.1.6"
r2d2 = "0.8.10"
r2d2_postgres = { version = "0.18.2" }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["stream", "json", "blocking", "rustls", "hickory-dns", "query"] }
rpassword = "7.5.1"
rss = "2.0.12"
rust-s3 = { version = "0.37.1", features = ["blocking", "fail-on-err", "futures-util", "tokio", "tokio-rustls-tls"], default-features = false }
serial_test = "3.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha256 = "1.6.0"
socketioxide = "0.18.3"
strfmt = "0.2.5"
sysinfo = { version = "0.38.4", default-features = false, features = ["disk", "system"] }
testcontainers = { version = "0.27.3" }
testcontainers-modules = { version = "0.15.0", features = ["postgres", "blocking"] }
thiserror = { version = "2.0.18", features = ["std"] }
mdns-sd = { version = "0.19" }
rust_cast = { version = "0.20", features = ["thread_safe"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0" }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
xml-builder = "0.6.0"
