[package]
name = "common-infrastructure"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
postgresql = ["diesel/postgres", "diesel/postgres_backend", "dep:r2d2_postgres"]
sqlite = ["diesel/sqlite", "dep:libsqlite3-sys", "diesel/returning_clauses_for_sqlite_3_35"]

[dependencies]
diesel = { version = "2.3.7", features = ["chrono", "r2d2"] }
r2d2 = "0.8.10"
thiserror = { version = "2.0.18", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"] }
axum = "0.8.6"
sha256 = "1.6.0"
url = "2.5.8"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
env_logger = "0.11.9"
log = "0.4.29"
reqwest = { version = "0.12.28", features = ["stream", "json", "blocking", "rustls-tls", "trust-dns"] }
base64 = "0.22.1"
regex = "1.12.3"
fs_extra = "1.3.0"
rust-s3 = { version = "0.36.0", features = ["blocking", "fail-on-err", "futures", "tokio", "tokio-rustls-tls"], default-features = false }
serde_json = "1.0.145"
strfmt = "0.2.5"
tokio = { version = "1.47.1", features = ["full"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"], optional = true }
r2d2_postgres = { version = "0.18.2", optional = true }
