[package]
name = "podfetch-cast"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
