[package]
name = "podfetch-persistence"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
postgresql = ["diesel/postgres", "diesel/postgres_backend", "dep:r2d2_postgres", "common-infrastructure/postgresql"]
sqlite = ["diesel/sqlite", "dep:libsqlite3-sys", "diesel/returning_clauses_for_sqlite_3_35", "common-infrastructure/sqlite"]

[dependencies]
common-infrastructure = { path = "../common-infrastructure", default-features = false }
podfetch-domain = { path = "../podfetch-domain" }
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
diesel = { version = "2.3.7", features = ["chrono", "r2d2"] }
indexmap = "2"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"], optional = true }
r2d2_postgres = { version = "0.18.2", optional = true }
uuid = { version = "1.22.0", features = ["v4"] }
