[package]
name = "podfetch-persistence"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
postgresql = ["diesel/postgres", "diesel/postgres_backend", "dep:r2d2_postgres", "diesel_migrations/postgres", "common-infrastructure/postgresql"]
sqlite = ["diesel/sqlite", "dep:libsqlite3-sys", "diesel/returning_clauses_for_sqlite_3_35", "diesel_migrations/sqlite", "common-infrastructure/sqlite"]

[dependencies]
common-infrastructure = { workspace = true }
podfetch-domain = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
libsqlite3-sys = { workspace = true, optional = true }
r2d2_postgres = { workspace = true, optional = true }
r2d2 = { workspace = true }
uuid = { workspace = true }
