[package]
name = "podfetch-web"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
sqlite = ["common-infrastructure/sqlite"]
postgresql = ["common-infrastructure/postgresql"]

[dependencies]
common-infrastructure = { path = "../common-infrastructure", default-features = false }
podfetch-domain = { path = "../podfetch-domain" }
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"
sha256 = "1.6.0"
thiserror = { version = "2.0.18", features = ["std"] }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
opml = "1.1.6"
xml-builder = "0.6.0"
url = "2.5.8"
log = "0.4.29"
