[package]
name = "podfetch-web"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
sqlite = ["common-infrastructure/sqlite", "podfetch-persistence/sqlite"]
postgresql = ["common-infrastructure/postgresql", "podfetch-persistence/postgresql"]

[dependencies]
common-infrastructure = { path = "../common-infrastructure", default-features = false }
podfetch-domain = { path = "../podfetch-domain" }
podfetch-persistence = { path = "../podfetch-persistence", default-features = false }
podfetch-storage = { path = "../podfetch-storage" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Web framework
axum = { version = "0.8.8", features = ["macros", "http2"] }
axum-extra = { version = "0.12.5", features = ["cookie", "query"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"] }
utoipa-axum = { version = "0.2.0" }
socketioxide = "0.18.2"
http = "1.3.1"
mime_guess = "2.0.5"

# Auth
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
base64 = "0.22.1"
sha256 = "1.6.0"
sha1 = "0.10.6"

# Async
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
async-recursion = "1.1.1"

# HTTP client
reqwest = { version = "0.12.28", features = ["stream", "json", "blocking", "rustls-tls", "trust-dns"] }

# RSS / OPML / XML
rss = "2.0.12"
opml = "1.1.6"
xml-builder = "0.6.0"

# Media metadata
id3 = "1.16.4"
mp4ameta = "0.13.0"
file-format = "0.28.0"

# Database (for direct queries in usecases/controllers)
diesel = { version = "2.3.7", features = ["chrono", "r2d2"] }
r2d2 = "0.8.10"

# Utilities
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
url = "2.5.8"
urlencoding = "2.1.3"
regex = "1.12.3"
strfmt = "0.2.5"
log = "0.4.29"
thiserror = { version = "2.0.18", features = ["std"] }
rand = "0.10.0"

# System info
sysinfo = { version = "0.38.4", default-features = false }

# Templating (for manifest)
maud = { version = "*", features = ["axum", "axum-core"] }
